2021-10-27 : 2.3.1
	all : deprecated neko (see README)
	std : fixed put_env when null is passed in (#229 https://github.com/HaxeFoundation/haxe/issues/10395)

2019-10-19 : 2.3.0
	std : added socket_set_broadcast function (#190)
	std : fixed sha1_update call (#194)
	std : fixed 0x7F detection in utf8 functions
	std : changed date_get_tz to take an argument (a timestamp), and to return minutes instead of seconds (#195)
	std : added date_utc_format, date_get_utc_day, and date_get_utc_hours - all variants of existing functions,
			but using gmtime_r instead of localtime_r (#195)

2017-12-19 : 2.2.0
	nekotools : added `nekotools boot -c *.n`, which generates a C file that contains the input Neko bytecode (#130)
	nekotools : fixed `nekotools boot` not able to find neko when a value in PATH does not have a trailing slash (#148)
	cmake : recognize common install location variables by using GNUInstallDirs
	cmake : fixed various build issues, particularly for FreeBSD (Thanks, ppenzin!), and cygwin
	cmake : added NekoConfig.cmake to ease building ndll or native program using Neko with CMake
	cmake : replaces WITH_NDLLS with WITH_* (#157)
	cmake : does not recompile nekoc/nekoml unless RECOMPILE_NEKOC_NEKOML (#171)
	all : added NEKO_MODULE_PATH in neko.h that points to the installation path of the ndll files
	std : bugfix in utf8_compare (https://github.com/HaxeFoundation/haxe/issues/5308)
	ssl : handle MBEDTLS_ERR_SSL_PEER_CLOSE_NOTIFY (#150)
	ssl : allow partial failure on loading certificates (#160)
	mysql : use eof terminated string when appropriated (#159)
	jit : disable jit for win64, which never worked
	all : introduced NEKO_BIG_ENDIAN and NEKO_LITTLE_ENDIAN to replace IS_BIG_ENDIAN, IS_LITTLE_ENDIAN, LITTLE_ENDIAN, BIG_ENDIAN, and BYTE_ORDER
	all : renamed TAG_BITS to NEKO_TAG_B1ITS
	all : add NEKO_JIT_DISABLE and NEKO_JIT_DEBUG CMake options
	all : VS2015 and 2017 compatiblity (#133 #172)
	sqlite : fixed reading 32-bit int from sqlite (#167)

2016-05-08 : 2.1.0