@@ -1,6 +1,6 @@
 parameters:
   name: 'BuildMac'
-  vmImage: 'macOS-10.14'
+  vmImage: 'macOS-10.15'
   staticDeps: 'true'
   config: 'RelWithDebInfo'
 
